--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
-<title>LifeCycle of A Snake</title>
+<title>The Lifecycle of Snakes</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta property="og:title" content="The Lifecycle of Snakes" />
+<meta property="og:image" content="./images/cycle.png" />
 <!-- Full Credit to w3-schools for css styles -->
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
