--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
 </div>
 
 <!-- !PAGE CONTENT! -->
+<div id="London" class="tabcontent">
 <div class="w3-main w3-content w3-padding" style="max-width:1200px;margin-top:100px">
 
   <!-- First Photo Grid-->
@@ -162,6 +163,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
   </footer>
 
 <!-- End page content -->
+</div>
 </div>
 
 <script>
