--- a/index.html
+++ b/index.html
@@ -54,8 +54,15 @@ body {font-family: Arial;}
 </div>
 
 <div id="London" class="tabcontent">
-  <h3>London</h3>
-  <p>London is the capital city of England.</p>
+  <h3>Embryo</h3>
+  
+  <p>This is an embro of snek</p>
+  
+  <img src="/images/baby.jpg" alt="Workplace" usemap="#workmap" width="400" height="379">
+
+<map name="workmap">
+  <area shape="circle" coords="337,300,44" onclick="myFunction()">
+</map>
 </div>
 
 <div id="Paris" class="tabcontent">
