--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@ body {font-family: Arial;}
 <p>In this example, we use JavaScript to "click" on the London button, to open the tab on page load.</p>
 
 <div class="tab">
-  <button class="tablinks" onclick="openCity(event, 'London')" id="defaultOpen">London</button>
-  <button class="tablinks" onclick="openCity(event, 'Paris')">Paris</button>
-  <button class="tablinks" onclick="openCity(event, 'Tokyo')">Tokyo</button>
+  <button class="tablinks" onclick="openCity(event, 'Embryo')" id="defaultOpen">Embryo</button>
+  <button class="tablinks" onclick="openCity(event, 'Juvenile')">Juvenile</button>
+  <button class="tablinks" onclick="openCity(event, 'Adult')">Adult</button>
 </div>
 
 <div id="Embryo" class="tabcontent">
