--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ body {font-family: Arial;}
   
   <p>This is an embro of snek</p>
   
-  <img src="/images/Embryo.jpg" alt="Workplace" usemap="#workmap" width="400" height="379">
+  <img src="/images/Embryo.png" alt="Workplace" usemap="#workmap" width="400" height="379">
 
 <map name="workmap">
   <area shape="circle" coords="337,300,44" onclick="myFunction()">
@@ -69,7 +69,7 @@ body {font-family: Arial;}
   <h3>Juvenile</h3>
   <p>This is a juvenile snake </p> 
   
-  <img src="/images/Juvenile.jpg" alt="Workplace" usemap="#workmap" width="400" height="379">
+  <img src="/images/Juvenile.png" alt="Workplace" usemap="#workmap" width="400" height="379">
 
 <map name="workmap">
   <area shape="circle" coords="337,300,44" onclick="myFunction()">
@@ -80,7 +80,7 @@ body {font-family: Arial;}
   <h3>Adult</h3>
   <p>This is an adult snake.</p>
   
-  <img src="/images/Adult.jpg" alt="Workplace" usemap="#workmap" width="400" height="379">
+  <img src="/images/Adult.png" alt="Workplace" usemap="#workmap" width="400" height="379">
 
   <map name="workmap">
   <area shape="circle" coords="337,300,44" onclick="myFunction()">
