--- a/index.html
+++ b/index.html
@@ -58,33 +58,28 @@ body {font-family: Arial;}
   
   <p>This is an embro of snek</p>
   
-  <img src="/images/Embryo.png" alt="Workplace" usemap="#workmap" width="400" height="379">
+  <img src="/images/Embryo.png" alt="Workplace" usemap="#embryomap" width="400" height="379">
 
-<map name="workmap">
-  <area shape="circle" coords="337,300,44" onclick="myFunction()">
-</map>
 </div>
 
 <div id="Juvenile" class="tabcontent">
   <h3>Juvenile</h3>
   <p>This is a juvenile snake </p> 
   
-  <img src="/images/Juvenile.png" alt="Workplace" usemap="#workmap" width="400" height="379">
+  <img src="/images/Juvenile.png" usemap="#juvenilemap" alt="Workplace" width="400" height="379">
 
-<map name="workmap">
-  <area shape="circle" coords="337,300,44" onclick="myFunction()">
+<map name="#juvenilemap">
+  <area shape="rect" coords="82, 33, 96, 50" onclick="myFunction()">
 </map>
+
 </div>
 
 <div id="Adult" class="tabcontent">
   <h3>Adult</h3>
   <p>This is an adult snake.</p>
-  
-  <img src="/images/Adult.png" alt="Workplace" usemap="#workmap" width="400" height="379">
 
-  <map name="workmap">
-  <area shape="circle" coords="337,300,44" onclick="myFunction()">
-</map>
+  <img src="/images/Adult.png" usemap="#Adultmap" alt="Workplace" width="400" height="379">
+
 </div>
 
 <script>
