--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@ body {font-family: Arial;}
   
   <p>This is an embro of snek</p>
   
+    <div class="add-info">
+    <span class="rightfloat">
+        <span id="onclickembryo"></span>
+        </span>
+    </span>
+</div>
+  
   <img src="/images/Embryo.png" alt="Workplace" usemap="#embryomap" width="302" height="149">
 
 </div>
@@ -67,14 +74,18 @@ body {font-family: Arial;}
   <p>This is a juvenile snake </p> 
   <div class="add-info">
     <span class="rightfloat">
-        <span id="contact-number"></span>
+        <span id="onclickjuvenile"></span>
         </span>
     </span>
 </div>
   <img src="/images/Juvenile.png" usemap="#juvenilemap" alt="Workplace" width="381" height="173">
 
 <map name="#juvenilemap">
-  <area shape="rect" coords="82, 33, 96, 50" onclick="myFunction()">
+  <area shape="rect" coords="72, 27, 92, 46" onclick="myFunction1()">
+   <area shape="rect" coords="80, 116, 99, 132" onclick="myFunction=2()">
+  <area shape="rect" coords="269, 22, 281, 38" onclick="myFunction=3()">
+  <area shape="rect" coords="271, 117, 284, 133" onclick="myFunction=4()">
+
 </map>
 
 </div>
@@ -82,6 +93,12 @@ body {font-family: Arial;}
 <div id="Adult" class="tabcontent">
   <h3>Adult</h3>
   <p>This is an adult snake.</p>
+  <div class="add-info">
+    <span class="rightfloat">
+        <span id="onclickadult"></span>
+        </span>
+    </span>
+</div>
 
   <img src="/images/Adult.png" usemap="#Adultmap" alt="Workplace" width="461" height="225">
 
@@ -91,10 +108,22 @@ body {font-family: Arial;}
   window.onload = function() {
     document.getElementById('contact-number').innerHTML = "Hello";
 }
- function myFunction() {
-   document.getElementById('contact-number').innerHTML = "Clicked!";
+ function myFunction1() {
+   document.getElementById('onclickjuvenile').innerHTML ="Clicked 1!";
+}
+  function myFunction2() {
+   document.getElementById('onclickjuvenile').innerHTML = "Clicked 2!";
   
 }
+  function myFunction3() {
+   document.getElementById('onclickjuvenile).innerHTML = "Clicked 3!";
+  
+}
+  function myFunction4() {
+   document.getElementById('onclickjuvenile').innerHTML = "Clicked 4!";
+  
+}
+  
 function openCity(evt, cityName) {
   var i, tabcontent, tablinks;
   tabcontent = document.getElementsByClassName("tabcontent");
