--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ body {font-family: Arial;}
 </head>
 <body>
 
-<p>In this example, we use JavaScript to "click" on the London button, to open the tab on page load.</p>
+<p>Click on the Image to see descriptions of the parts</p>
 
 <div class="tab">
   <button class="tablinks" onclick="openCity(event, 'Embryo')" id="defaultOpen">Embryo</button>
