--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ body {font-family: Arial;}
   
   <p>This is an embro of snek</p>
   
-    <div class="add-info">
+    <div class="emb">
     <span class="rightfloat">
         <span id="onclickembryo"></span>
         </span>
@@ -72,7 +72,7 @@ body {font-family: Arial;}
 <div id="Juvenile" class="tabcontent">
   <h3>Juvenile</h3>
   <p>This is a juvenile snake </p> 
-  <div class="add-info">
+  <div class="juv">
     <span class="rightfloat">
         <span id="onclickjuvenile"></span>
         </span>
@@ -82,9 +82,9 @@ body {font-family: Arial;}
 
 <map name="#juvenilemap">
   <area shape="rect" coords="72, 27, 92, 46" onclick="myFunction1()">
-   <area shape="rect" coords="80, 116, 99, 132" onclick="myFunction=2()">
-  <area shape="rect" coords="269, 22, 281, 38" onclick="myFunction=3()">
-  <area shape="rect" coords="271, 117, 284, 133" onclick="myFunction=4()">
+   <area shape="rect" coords="80, 116, 99, 132" onclick="myFunction2()">
+  <area shape="rect" coords="269, 22, 281, 38" onclick="myFunction3()">
+  <area shape="rect" coords="271, 117, 284, 133" onclick="myFunction4()">
 
 </map>
 
@@ -93,7 +93,7 @@ body {font-family: Arial;}
 <div id="Adult" class="tabcontent">
   <h3>Adult</h3>
   <p>This is an adult snake.</p>
-  <div class="add-info">
+  <div class="adul">
     <span class="rightfloat">
         <span id="onclickadult"></span>
         </span>
