--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ body {font-family: Arial;}
 
 <script>
   window.onload = function() {
-    document.getElementById('contact-number').innerHTML = "Hello";
+    document.getElementById('onclickjuvenile').innerHTML = "Hello";
 }
  function myFunction1() {
    document.getElementById('onclickjuvenile').innerHTML ="Clicked 1!";
