--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ body {font-family: Arial;}
   <p>This is an adult snake.</p>
   <div class="adul">
     <span class="rightfloat">
-        <span id="onclickadult"></span>
+        <b><span id="onclickadult"></b></span>
         </span>
     </span>
 </div>
