--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ body {font-family: Arial;}
   <p>This is a juvenile snake </p> 
   <div class="juv">
     <span class="rightfloat">
-        <span id="onclickjuvenile"></span>
+      <b><span id="onclickjuvenile"></b></span>
         </span>
     </span>
 </div>
