--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@ body {font-family: Arial;}
   <p>This is a juvenile snake </p> 
   <div class="juv">
     <span class="rightfloat">
-      <b><span id="onclickjuvenile"></b></span>
+       <p style="font-size:20px"><b><span id="onclickjuvenile"></b></p></span>
         </span>
     </span>
 </div>
   <img src="/images/Juvenile.png" usemap="#juvenilemap" alt="Workplace" width="381" height="173">
 
 <map name="#juvenilemap">
-  <area shape="rect" coords="72, 27, 92, 46" onclick="myFunction1()">
-   <area shape="rect" coords="80, 116, 99, 132" onclick="myFunction2()">
+  <area shape="rect" coords="72, 27, 92, 46" onclick="myFunctionJuv(1)">
+   <area shape="rect" coords="80, 116, 99, 132" onclick="myFunctionJuv(2)">
 
 
 </map>
@@ -107,12 +107,14 @@ body {font-family: Arial;}
   window.onload = function() {
     document.getElementById('onclickjuvenile').innerHTML = "Hello";
 }
- function myFunction1() {
+ function myFunctionJuv(variable) {
+   if (variable == 1){
    document.getElementById('onclickjuvenile').innerHTML ="Clicked 1!";
+   } else if(variable == 2){
+   document.getElementById('onclickjuvenile').innerHTML ="Clicked 2!";
+   }
 }
-  function myFunction2() {
-   document.getElementById('onclickjuvenile').innerHTML = "Clicked 2!";
- }
+ 
   
 function openCity(evt, cityName) {
   var i, tabcontent, tablinks;
