--- a/index.html
+++ b/index.html
@@ -60,12 +60,17 @@ body {font-family: Arial;}
   
     <div class="emb">
     <span class="rightfloat">
-        <span id="onclickembryo"></span>
+        <p style="font-size:20px"><b><span id="onclickembryo"></b></p></span>
         </span>
     </span>
 </div>
   
   <img src="/images/Embryo.png" alt="Workplace" usemap="#embryomap" width="302" height="149">
+  
+  <map name="#embryomap">
+  <area shape="rect" coords="72, 27, 92, 46" onclick="myFunctionEmb(1)">
+   <area shape="rect" coords="80, 116, 99, 132" onclick="myFunctionEmb(2)">
+</map>
 
 </div>
 
@@ -83,8 +88,6 @@ body {font-family: Arial;}
 <map name="#juvenilemap">
   <area shape="rect" coords="72, 27, 92, 46" onclick="myFunctionJuv(1)">
    <area shape="rect" coords="80, 116, 99, 132" onclick="myFunctionJuv(2)">
-
-
 </map>
 
 </div>
@@ -101,13 +104,37 @@ body {font-family: Arial;}
 
   <img src="/images/Adult.png" usemap="#Adultmap" alt="Workplace" width="461" height="225">
 
+<map name="#Adultmap">
+  <area shape="rect" coords="72, 27, 92, 46" onclick="myFunctionAdul(1)">
+   <area shape="rect" coords="80, 116, 99, 132" onclick="myFunctionAdul(2)">
+</map>
 </div>
 
 <script>
-  window.onload = function() {
-    document.getElementById('onclickjuvenile').innerHTML = "Hello";
+  
+  
+    window.onload = function() {
+    document.getElementById('onclickembryo').innerHTML = "Hello";
 }
+ function myFunctionEmb(variable) {
+   if (variable == 1){
+   document.getElementById('onclickembryo').innerHTML ="Clicked 1!";
+   } else if(variable == 2){
+   document.getElementById('onclickembryo').innerHTML ="Clicked 2!";
+   }
+}
+  
+  
  function myFunctionJuv(variable) {
+   if (variable == 1){
+   document.getElementById('onclickjuvenile').innerHTML ="Clicked 1!";
+   } else if(variable == 2){
+   document.getElementById('onclickjuvenile').innerHTML ="Clicked 2!";
+   }
+}
+  
+   
+ function myFunctionAdul(variable) {
    if (variable == 1){
    document.getElementById('onclickjuvenile').innerHTML ="Clicked 1!";
    } else if(variable == 2){
