--- a/index.html
+++ b/index.html
@@ -113,8 +113,14 @@ body {font-family: Arial;}
 <script>
   
   
-    window.onload = function() {
+    window.onload = function1() {
     document.getElementById('onclickembryo').innerHTML = "Hello";
+}
+   window.onload = function2() {
+    document.getElementById('onclickjuvenile').innerHTML = "Hello";
+}
+   window.onload = function3() {
+    document.getElementById('onclickadult').innerHTML = "Hello";
 }
  function myFunctionEmb(variable) {
    if (variable == 1){
@@ -136,9 +142,9 @@ body {font-family: Arial;}
    
  function myFunctionAdul(variable) {
    if (variable == 1){
-   document.getElementById('onclickjuvenile').innerHTML ="Clicked 1!";
+   document.getElementById('onclickadult').innerHTML ="Clicked 1!";
    } else if(variable == 2){
-   document.getElementById('onclickjuvenile').innerHTML ="Clicked 2!";
+   document.getElementById('onclickadult').innerHTML ="Clicked 2!";
    }
 }
  
