--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 body {font-family: Arial;}
 
 /* Style the tab */
+  
+ p.test {
+  width: 11em; 
+  border: 1px solid #000000;
+  word-wrap: break-word;
+}
 .tab {
   overflow: hidden;
   border: 1px solid #ccc;
@@ -68,7 +74,7 @@ body {font-family: Arial;}
   
   <div class="emb">
     <span class="rightfloat">
-        <p style="font-size:20px"><b><span id="onclickembryo"></b></p></span>
+        <p class="test" style="font-size:20px"><b><span id="onclickembryo"></b></p></span>
         </span>
     </span>
 </div>
