--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@ body {font-family: Arial;}
 
 /* Style the tab */
   
- p.test {
-  width: 11em; 
-  border: 1px solid #000000;
-  word-wrap: break-word;
-}
+
 .tab {
   overflow: hidden;
   border: 1px solid #ccc;
@@ -74,7 +70,7 @@ body {font-family: Arial;}
   
   <div class="emb">
     <span class="rightfloat">
-        <p class="test" style="font-size:20px"><b><span id="onclickembryo"></b></p></span>
+        <p style="font-size:20px"><b><span id="onclickembryo"></b></p></span>
         </span>
     </span>
 </div>
@@ -85,7 +81,7 @@ body {font-family: Arial;}
   <h3>Juvenile</h3>
   <p>This is a juvenile snake </p> 
 
-  <img src="/images/Juvenile.png" usemap="#juvenilemap" alt="Workplace" width="381" height="173">
+  <img src="/images/Juvenile.png" usemap="#juvenilemap" alt="Workplace" width="457" height="206">
 
 <map name="#juvenilemap">
   <area shape="rect" coords="72, 27, 92, 46" onclick="myFunctionJuv(1)">
