--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ body {font-family: Arial;}
 
 <div id="Juvenile" class="tabcontent">
   <h3>Juvenile</h3>
-  <p>This is a juvenile snake </p> 
+  <p>This is a juvenile snek </p> 
 
   <img src="/images/Juvenile.png" usemap="#juvenilemap" alt="Workplace" width="457" height="206">
 
@@ -99,7 +99,7 @@ body {font-family: Arial;}
 
 <div id="Adult" class="tabcontent">
   <h3>Adult</h3>
-  <p>This is an adult snake.</p>
+  <p>This is an adult snek</p>
 
   <img src="/images/Adult.png" usemap="#adultmap" alt="Workplace" width="461" height="225">
 
@@ -110,7 +110,7 @@ body {font-family: Arial;}
   
  <div class="adul">
     <span class="rightfloat">
-        <p style="font-size:20px"><b><span id="onclickadult"></b></p></span>
+        <p style="font-size:25px"><b><span id="onclickadult"></b></p></span>
         </span>
     </span>
 </div>
