--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@ body {font-family: Arial;}
 <body>
 
 <p>Click on the Image to see descriptions of the parts</p>
+  
+<p>Ross is so awesome for doing this Vista is the luckiest girl ever</p>
 
 <div class="tab">
   <button class="tablinks" onclick="openCity(event, 'Embryo')" id="defaultOpen">Embryo</button>
