--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ body {font-family: Arial;}
   
  <div class="juv">
     <span class="rightfloat">
-       <p style="font-size:15px"><b><span id="onclickjuvenile"></b></p></span>
+      <b><span id="onclickjuvenile"></b></span>
         </span>
     </span>
 </div>
