--- a/index.html
+++ b/index.html
@@ -60,12 +60,6 @@ body {font-family: Arial;}
   <h3>Embryo</h3>
   
   <p>This is an embro of snek</p>
-  <div class="emb">
-    <span class="rightfloat">
-        <p style="font-size:15px"><b><span id="onclickembryo"></b></p></span>
-        </span>
-    </span>
-</div>
   
   <img src="/images/Embryo.png" alt="Workplace" usemap="#embryomap" width="453" height="224">
   
@@ -73,6 +67,13 @@ body {font-family: Arial;}
   <area shape="rect" coords="72, 27, 92, 46" onclick="myFunctionEmb(1)">
    <area shape="rect" coords="80, 116, 99, 132" onclick="myFunctionEmb(2)">
 </map>
+  
+    <div class="emb">
+    <span class="rightfloat">
+        <p style="font-size:20px"><b><span id="onclickembryo"></b></p></span>
+        </span>
+    </span>
+</div>
 
 
 </div>
@@ -81,12 +82,7 @@ body {font-family: Arial;}
   <h3>Juvenile</h3>
   <p>This is a juvenile snek </p> 
   
- <div class="juv">
-    <span class="rightfloat">
-      <b><span id="onclickjuvenile"></b></span>
-        </span>
-    </span>
-</div>
+
 
   <img src="/images/Juvenile.png" usemap="#juvenilemap" alt="Workplace" width="457" height="206">
 
@@ -94,21 +90,20 @@ body {font-family: Arial;}
   <area shape="rect" coords="72, 27, 92, 46" onclick="myFunctionJuv(1)">
    <area shape="rect" coords="80, 116, 99, 132" onclick="myFunctionJuv(2)">
 </map>
-  
-
-
+ 
+ <div class="juv">
+    <span class="rightfloat">
+      <p style="font-size:20px"><b><span id="onclickjuvenile"></b></p></span>
+        </span>
+    </span>
+</div>
 </div>
 
 <div id="Adult" class="tabcontent">
   <h3>Adult</h3>
   <p>This is an adult snek</p>
   
-<div class="adul">
-    <span class="rightfloat">
-        <p style="font-size:15px"><b><span id="onclickadult"></b></p></span>
-        </span>
-    </span>
-</div>
+
 
   <img src="/images/Adult.png" usemap="#adultmap" alt="Workplace" width="461" height="225">
 
@@ -116,6 +111,13 @@ body {font-family: Arial;}
   <area shape="rect" coords="72, 27, 92, 46" onclick="myFunctionAdul(1)">
    <area shape="rect" coords="80, 116, 99, 132" onclick="myFunctionAdul(2)">
 </map>
+  
+ <div class="adul">
+    <span class="rightfloat">
+        <p style="font-size:20px"><b><span id="onclickadult"></b></p></span>
+        </span>
+    </span>
+</div>
   
 
 </div>
