--- a/index.html
+++ b/index.html
@@ -64,8 +64,10 @@ body {font-family: Arial;}
   <img src="/images/Embryo.png" alt="Workplace" usemap="#embryomap" width="302" height="149">
   
   <map name="#embryomap">
-  <area shape="rect" coords="72, 27, 92, 46" onclick="myFunctionEmb(1)">
-   <area shape="rect" coords="80, 116, 99, 132" onclick="myFunctionEmb(2)">
+  <area shape="rect" coords="19, 117, 49, 128" onclick="myFunctionEmb(1)">
+    <area shape="rect" coords="18, 53, 39, 93" onclick="myFunctionEmb(1)">
+   <area shape="rect" coords="77, 128, 109, 103" onclick="myFunctionEmb(2)">
+    <area shape="rect" coords="62, 41, 91, 142" onclick="myFunctionEmb(2)">
 </map>
   
     <div class="emb">
@@ -123,7 +125,7 @@ body {font-family: Arial;}
 </div>
 
 <script>
-  let EmbryoList = ["Embryo 1", "Embryo 2"];
+  let EmbryoList = ["Nasal", "Frontal"];
 
  function myFunctionEmb(variable) {
    if (variable == 1){
