--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@ body {font-family: Arial;}
     <area shape="rect" coords="18, 53, 39, 93" onclick="myFunctionEmb(1)">
    <area shape="rect" coords="77, 128, 109, 103" onclick="myFunctionEmb(2)">
     <area shape="rect" coords="62, 41, 91, 142" onclick="myFunctionEmb(2)">
+       <area shape="rect" coords="97, 111, 116, 117" onclick="myFunctionEmb(3)">
+    <area shape="rect" coords="104, 136, 123, 145" onclick="myFunctionEmb(3)">
 </map>
   
     <div class="emb">
