--- a/index.html
+++ b/index.html
@@ -127,13 +127,15 @@ body {font-family: Arial;}
 </div>
 
 <script>
-  let EmbryoList = ["Nasal", "Frontal"];
+  let EmbryoList = ["Nasal", "Frontal", "Maxilla"];
 
  function myFunctionEmb(variable) {
    if (variable == 1){
    document.getElementById('onclickembryo').innerHTML = EmbryoList[0];
    } else if(variable == 2){
    document.getElementById('onclickembryo').innerHTML = EmbryoList[1];
+   }else if(variable == 3){
+   document.getElementById('onclickembryo').innerHTML = EmbryoList[2];
    }
 }
   
