--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@ body {font-family: Arial;}
   <img src="/images/Juvenile.png" usemap="#juvenilemap" alt="Workplace" width="381" height="173">
 
 <map name="#juvenilemap">
-  <area shape="rect" coords="72, 27, 92, 46" onclick="myFunctionJuv(1)">
+  <area shape="rect" coords="43, 132, 56, 145" onclick="myFunctionJuv(1)">
+  <area shape="rect" coords="41, 2, 57, 102" onclick="myFunctionJuv(1)">
    <area shape="rect" coords="80, 116, 99, 132" onclick="myFunctionJuv(2)">
 </map>
  
@@ -159,7 +160,7 @@ body {font-family: Arial;}
    }
 }
   
-  let JuvenileList = ["Juvenile 1", "Juvenile 2"];
+  let JuvenileList = ["Nasal", "Juvenile 2"];
   
  function myFunctionJuv(variable) {
    if (variable == 1){
