--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@ body {font-family: Arial;}
 <map name="#juvenilemap">
   <area shape="rect" coords="43, 132, 56, 145" onclick="myFunctionJuv(1)">
   <area shape="rect" coords="41, 2, 57, 102" onclick="myFunctionJuv(1)">
-   <area shape="rect" coords="80, 116, 99, 132" onclick="myFunctionJuv(2)">
+   <area shape="rect" coords="127, 144, 138, 156" onclick="myFunctionJuv(2)">
+   <area shape="rect" coords="98, 50, 146, 114" onclick="myFunctionJuv(2)">
 </map>
  
  <div class="juv">
@@ -160,7 +161,7 @@ body {font-family: Arial;}
    }
 }
   
-  let JuvenileList = ["Nasal", "Juvenile 2"];
+  let JuvenileList = ["Nasal", "Frontal"];
   
  function myFunctionJuv(variable) {
    if (variable == 1){
