--- a/index.html
+++ b/index.html
@@ -103,6 +103,18 @@ body {font-family: Arial;}
   <area shape="rect" coords="41, 2, 57, 102" onclick="myFunctionJuv(1)">
    <area shape="rect" coords="127, 144, 138, 156" onclick="myFunctionJuv(2)">
    <area shape="rect" coords="88, 44, 151, 117" onclick="myFunctionJuv(2)">
+  <area shape="rect" coords="139, 128, 166, 138" onclick="myFunctionJuv(3)">
+  <area shape="rect" coords="144, 142, 163, 158" onclick="myFunctionJuv(3)">
+  <area shape="rect" coords="218, 159, 230, 168" onclick="myFunctionJuv(4)">
+  <area shape="rect" coords="169, 35, 265, 129" onclick="myFunctionJuv(4)">
+  <area shape="rect" coords="270, 135, 297, 136" onclick="myFunctionJuv(5)">
+    <area shape="rect" coords="273, 153, 287, 163" onclick="myFunctionJuv(5)">
+    <area shape="rect" coords="296, 158, 309, 168" onclick="myFunctionJuv(6)">
+  <area shape="rect" coords="293, 143, 313, 141" onclick="myFunctionJuv(6)">
+   <area shape="rect" coords="351, 143, 365, 154" onclick="myFunctionJuv(7)">
+  <area shape="rect" coords="367, 117, 379, 129" onclick="myFunctionJuv(8)">
+   <area shape="rect" coords="350, 92, 367, 106" onclick="myFunctionJuv(9)">
+  <area shape="rect" coords="318, 92, 325, 124" onclick="myFunctionJuv(9)">
 </map>
  
  <div class="juv">
@@ -161,13 +173,27 @@ body {font-family: Arial;}
    }
 }
   
-  let JuvenileList = ["Nasal", "Frontal"];
+  let JuvenileList = ["Nasal", "Frontal", "Maxilla", "Parietal", "Supratemporal", "Quadrate", "Compound Bone", "Pterygoid", "Otoccipital"];
   
  function myFunctionJuv(variable) {
    if (variable == 1){
    document.getElementById('onclickjuvenile').innerHTML = JuvenileList[0];
    } else if(variable == 2){
    document.getElementById('onclickjuvenile').innerHTML = JuvenileList[1];
+   }else if(variable == 3){
+   document.getElementById('onclickjuvenile').innerHTML = JuvenileList[2];
+   }else if(variable == 4){
+   document.getElementById('onclickjuvenile').innerHTML = JuvenileList[3];
+   }else if(variable == 5){
+   document.getElementById('onclickjuvenile').innerHTML = JuvenileList[4];
+   }else if(variable == 6){
+   document.getElementById('onclickjuvenile').innerHTML = JuvenileList[5];
+   }else if(variable == 7){
+   document.getElementById('onclickjuvenile').innerHTML = JuvenileList[6];
+   }else if(variable == 8){
+   document.getElementById('onclickjuvenile').innerHTML = JuvenileList[7];
+   }else if(variable == 9){
+   document.getElementById('onclickjuvenile').innerHTML = JuvenileList[8];
    }
 }
   let AdultList = ["Adult 1", "Adult 2"];
