--- a/index.html
+++ b/index.html
@@ -135,8 +135,24 @@ body {font-family: Arial;}
   <img src="/images/Adult.png" usemap="#adultmap" alt="Workplace" width="461" height="225">
 
 <map name="#adultmap">
-  <area shape="rect" coords="72, 27, 92, 46" onclick="myFunctionAdul(1)">
-   <area shape="rect" coords="80, 116, 99, 132" onclick="myFunctionAdul(2)">
+  <area shape="rect" coords="10, 147, 29, 164" onclick="myFunctionAdul(1)">
+  <area shape="rect" coords="8, 73, 37, 129" onclick="myFunctionAdul(1)">
+   <area shape="rect" coords="109, 179, 122, 197" onclick="myFunctionAdul(2)">
+     <area shape="rect" coords="69, 52, 130, 141" onclick="myFunctionAdul(2)">
+   <area shape="rect" coords="135, 193, 163, 205" onclick="myFunctionAdul(3)">
+  <area shape="rect" coords="156, 169, 135, 169" onclick="myFunctionAdul(3)">
+   <area shape="rect" coords="210, 188, 231, 208" onclick="myFunctionAdul(4)">
+  <area shape="rect" coords="152, 31, 285, 168" onclick="myFunctionAdul(4)">
+  <area shape="rect" coords="353, 192, 372, 211" onclick="myFunctionAdul(5)">
+  <area shape="rect" coords="302, 152, 382, 156" onclick="myFunctionAdul(5)">
+   <area shape="rect" coords="384, 197, 398, 209" onclick="myFunctionAdul(6)">
+  <area shape="rect" coords="355, 162, 395, 182" onclick="myFunctionAdul(6)">
+   <area shape="rect" coords="415, 192, 439, 210" onclick="myFunctionAdul(7)">
+  <area shape="rect" coords="404, 159, 433, 178" onclick="myFunctionAdul(7)">
+   <area shape="rect" coords="420, 128, 438, 121" onclick="myFunctionAdul(8)">
+  <area shape="rect" coords="380, 133, 417, 156" onclick="myFunctionAdul(8)">
+  <area shape="rect" coords="394, 100, 414, 121" onclick="myFunctionAdul(9)">
+  <area shape="rect" coords="352, 103, 369, 133" onclick="myFunctionAdul(9)">
 </map>
   
  <div class="adul">
@@ -197,13 +213,27 @@ body {font-family: Arial;}
    document.getElementById('onclickjuvenile').innerHTML = JuvenileList[8];
    }
 }
-  let AdultList = ["Adult 1", "Adult 2"];
+  let AdultList = ["Nasal", "Frontal", "Maxilla", "Parietal", "Supratemporal", "Quadrate", "Compound Bone", "Pterygoid", "Otoccipital"];
    
  function myFunctionAdul(variable) {
    if (variable == 1){
    document.getElementById('onclickadult').innerHTML = AdultList[0];
    } else if(variable == 2){
    document.getElementById('onclickadult').innerHTML = AdultList[1];
+   }else if(variable == 3){
+   document.getElementById('onclickadult').innerHTML = AdultList[2];
+   }else if(variable == 4){
+   document.getElementById('onclickadult').innerHTML = AdultList[3];
+   }else if(variable == 5){
+   document.getElementById('onclickadult').innerHTML = AdultList[4];
+   }else if(variable == 6){
+   document.getElementById('onclickadult').innerHTML = AdultList[5];
+   }else if(variable == 7){
+   document.getElementById('onclickadult').innerHTML = AdultList[6];
+   }else if(variable == 8){
+   document.getElementById('onclickadult').innerHTML = AdultList[7];
+   }else if(variable == 9){
+   document.getElementById('onclickadult').innerHTML = AdultList[8];
    }
 }
  
