--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@ body {font-family: Arial;}
   <area shape="rect" coords="404, 159, 433, 178" onclick="myFunctionAdul(7)">
    <area shape="rect" coords="420, 128, 438, 121" onclick="myFunctionAdul(8)">
   <area shape="rect" coords="380, 133, 417, 156" onclick="myFunctionAdul(8)">
+  <area shape="rect" coords="422, 131, 436, 138" onclick="myFunctionAdul(8)">
   <area shape="rect" coords="394, 100, 414, 121" onclick="myFunctionAdul(9)">
   <area shape="rect" coords="352, 103, 369, 133" onclick="myFunctionAdul(9)">
 </map>
