--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@ body {font-family: Arial;}
    <area shape="rect" coords="210, 188, 231, 208" onclick="myFunctionAdul(4)">
   <area shape="rect" coords="152, 31, 285, 168" onclick="myFunctionAdul(4)">
   <area shape="rect" coords="353, 192, 372, 211" onclick="myFunctionAdul(5)">
+  <area shape="rect" coords="275, 153, 378, 159" onclick="myFunctionAdul(5)">
   <area shape="rect" coords="302, 152, 382, 156" onclick="myFunctionAdul(5)">
    <area shape="rect" coords="384, 197, 398, 209" onclick="myFunctionAdul(6)">
   <area shape="rect" coords="355, 162, 395, 182" onclick="myFunctionAdul(6)">
