--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@ body {font-family: Arial;}
 </div>
 
 <div id="Embryo" class="tabcontent">
-  <h3>Embryo</h3>
+  <h3>Embryonic Stage</h3>
   
-  <p>This is an embro of snek</p>
+  <p>Skull length: 9.7mm</p>
   
   <img src="/images/Embryo.png" alt="Workplace" usemap="#embryomap" width="302" height="149">
   
@@ -91,8 +91,8 @@ body {font-family: Arial;}
 </div>
 
 <div id="Juvenile" class="tabcontent">
-  <h3>Juvenile</h3>
-  <p>This is a juvenile snek </p> 
+  <h3>Juvenile Stage</h3>
+  <p>Skull Lenghth: 11.6 mm </p> 
   
 
 
@@ -127,8 +127,8 @@ body {font-family: Arial;}
 </div>
 
 <div id="Adult" class="tabcontent">
-  <h3>Adult</h3>
-  <p>This is an adult snek</p>
+  <h3>Adult Stage</h3>
+  <p>Skull Lenght: 17.1 mm</p>
   
 
 
