--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ body {font-family: Arial;}
 
 <script>
   let EmbryoList = ["Nasal", "Frontal", "Maxilla", "Parietal", "Supratemporal", "Quadrate", "Compound Bone", "Pterygoid", "Otoccipital"];
-  let EmbryoListText = ["First text for nasal", "Second text for frontal"];
+  let EmbryoListText = ["The dorsal laminae of the nasal is only a weakly ossified surface.", "The frontal exhibits no contact with the parietals and the posterior third is unsutured.", "There is minimal contact between premaxilla and rest of the snout.", "The central parietal roof is unossified. There is a space between the parietal and supraoccipital.", "The posterior terminus is downcurved and anterior to occiput.", "The quadrate is anterior to occipital condyle and is slightly off-vertical.", "The compound bone terminates slightly posteroventral to occipital condyle. The mandibular condyle is anterior to occipital condyle.", "The posterior terminus is below the occipital condyle.", "The jugular foramen is small and internally undivided. The crista tuberalis is unfused ventrally to crista interfenestralis. The LARST opens laterally."];
   
   
  function myFunctionEmb(variable) {
@@ -225,20 +225,28 @@ body {font-family: Arial;}
     document.getElementById('onclickjuveniletext').innerHTML = JuvenileListText[0];
    } else if(variable == 2){
    document.getElementById('onclickjuvenile').innerHTML = JuvenileList[1];
+     document.getElementById('onclickjuveniletext').innerHTML = JuvenileListText[1];
    }else if(variable == 3){
    document.getElementById('onclickjuvenile').innerHTML = JuvenileList[2];
+     document.getElementById('onclickjuveniletext').innerHTML = JuvenileListText[2];
    }else if(variable == 4){
    document.getElementById('onclickjuvenile').innerHTML = JuvenileList[3];
+     document.getElementById('onclickjuveniletext').innerHTML = JuvenileListText[3];
    }else if(variable == 5){
    document.getElementById('onclickjuvenile').innerHTML = JuvenileList[4];
+     document.getElementById('onclickjuveniletext').innerHTML = JuvenileListText[4];
    }else if(variable == 6){
    document.getElementById('onclickjuvenile').innerHTML = JuvenileList[5];
+     document.getElementById('onclickjuveniletext').innerHTML = JuvenileListText[5];
    }else if(variable == 7){
    document.getElementById('onclickjuvenile').innerHTML = JuvenileList[6];
+     document.getElementById('onclickjuveniletext').innerHTML = JuvenileListText[6];
    }else if(variable == 8){
    document.getElementById('onclickjuvenile').innerHTML = JuvenileList[7];
+     document.getElementById('onclickjuveniletext').innerHTML = JuvenileListText[7];
    }else if(variable == 9){
    document.getElementById('onclickjuvenile').innerHTML = JuvenileList[8];
+     document.getElementById('onclickjuveniletext').innerHTML = JuvenileListText[8];
    }
 }
   let AdultList = ["Nasal", "Frontal", "Maxilla", "Parietal", "Supratemporal", "Quadrate", "Compound Bone", "Pterygoid", "Otoccipital"];
