--- a/index.html
+++ b/index.html
@@ -200,20 +200,28 @@ body {font-family: Arial;}
      document.getElementById('onclickembryotext').innerHTML = EmbryoListText[0];
    } else if(variable == 2){
    document.getElementById('onclickembryo').innerHTML = EmbryoList[1];
+     document.getElementById('onclickembryotext').innerHTML = EmbryoListText[1];
    }else if(variable == 3){
    document.getElementById('onclickembryo').innerHTML = EmbryoList[2];
+     document.getElementById('onclickembryotext').innerHTML = EmbryoListText[2];
    }else if(variable == 4){
    document.getElementById('onclickembryo').innerHTML = EmbryoList[3];
+     document.getElementById('onclickembryotext').innerHTML = EmbryoListText[3];
    }else if(variable == 5){
    document.getElementById('onclickembryo').innerHTML = EmbryoList[4];
+     document.getElementById('onclickembryotext').innerHTML = EmbryoListText[4];
    }else if(variable == 6){
    document.getElementById('onclickembryo').innerHTML = EmbryoList[5];
+     document.getElementById('onclickembryotext').innerHTML = EmbryoListText[5];
    }else if(variable == 7){
    document.getElementById('onclickembryo').innerHTML = EmbryoList[6];
+     document.getElementById('onclickembryotext').innerHTML = EmbryoListText[6];
    }else if(variable == 8){
    document.getElementById('onclickembryo').innerHTML = EmbryoList[7];
+     document.getElementById('onclickembryotext').innerHTML = EmbryoListText[7];
    }else if(variable == 9){
    document.getElementById('onclickembryo').innerHTML = EmbryoList[8];
+     document.getElementById('onclickembryotext').innerHTML = EmbryoListText[8];
    }
 }
   
