--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ body {font-family: Arial;}
 </div>
 <div class="emb">
     <span class="rightfloat">
-        <p style="font-size:15px"><b><span id="onclickembryotext"></b></p></span>
+        <p style="font-size:16px"><b><span id="onclickembryotext"></b></p></span>
         </span>
     </span>
 </div>
@@ -134,7 +134,7 @@ body {font-family: Arial;}
  
  <div class="juv">
     <span class="rightfloat">
-      <p style="font-size:15px"><b><span id="onclickjuveniletext"></b></p></span>
+      <p style="font-size:16px"><b><span id="onclickjuveniletext"></b></p></span>
         </span>
     </span>
 </div>
@@ -181,7 +181,7 @@ body {font-family: Arial;}
 
  <div class="adul">
     <span class="rightfloat">
-        <p style="font-size:20px"><b><span id="onclickadulttext"></b></p></span>
+        <p style="font-size:16px"><b><span id="onclickadulttext"></b></p></span>
         </span>
     </span>
 </div>
@@ -226,7 +226,7 @@ body {font-family: Arial;}
 }
   
   let JuvenileList = ["Nasal", "Frontal", "Maxilla", "Parietal", "Supratemporal", "Quadrate", "Compound Bone", "Pterygoid", "Otoccipital"];
-  let JuvenileListText = ["Ossification of the doral laminae is increased.", "There is now minor contact with parietal, although the fontanelle (gap) persists.", "Same as embyronic stage.", "The parietal roof is now ossified and the fontanelle (gap) between the parietal and supraoccipital closed.", "The downward curvature disappears and the supratemporal undergoes a slight posterior elongation.", "The quadrate is dorsoventrally elongated and undergoes a slight posterior shift.", "There is slight posterior elongation. The mandibular condyle closes to level of occipital condyle.", "The posterior terminus moves slightly beyond occipital condyle (becomes more visible).", "The jugular foramen becomes more defined but remains undivided. The crista tuberalis expands but is still unfused to crista interfenestralis."];
+  let JuvenileListText = ["Ossification of the doral laminae is increased.", "There is now minor contact with parietal, although the fontanelle (gap) persists.", "Same as embyronic stage.", "The parietal roof is now ossified and the fontanelle (gap) between the parietal and supraoccipital closed.", "The downward curvature disappears and the supratemporal undergoes a slight posterior elongation.", "The quadrate is dorsoventrally elongated and undergoes a slight posterior shift.", "There is slight posterior elongation. The mandibular condyle closes to level of occipital condyle.", "The posterior terminus moves slightly beyond occipital condyle.", "The jugular foramen becomes more defined but remains undivided. The crista tuberalis expands but is still unfused to crista interfenestralis."];
  function myFunctionJuv(variable) {
    if (variable == 1){
    document.getElementById('onclickjuvenile').innerHTML = JuvenileList[0];
